force-app/main/default/objects/Presupuesto_detalle__c/Presupuesto_detalle__c.object-meta.xml
<CustomObject>
    <label>Presupuesto detalle</label>
    <nameField>
        <displayFormat>PD-{00000000}</displayFormat>
        <label>Nombre de Presupuesto detalle</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presupuestos detalle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>