force-app/main/default/objects/Presupuesto_detalle__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>