force-app/main/default/objects/Presupuesto_detalle__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concepto</label>
    <referenceTo>Concepto__c</referenceTo>
    <relationshipLabel>Presupuestos detalle</relationshipLabel>
    <relationshipName>Presupuestos_detalle</relationshipName>
    <type>Lookup</type>
</CustomField>