force-app/main/default/objects/Presupuesto_detalle__c/fields/Gantt__c.field-meta.xml
<CustomField>
    <fullName>Gantt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gantt</label>
    <referenceTo>Gantt__c</referenceTo>
    <relationshipLabel>Presupuestos detalle</relationshipLabel>
    <relationshipName>Presupuestos_detalle</relationshipName>
    <type>Lookup</type>
</CustomField>