force-app/main/default/objects/Presupuesto_detalle__c/fields/Presupuesto_base__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_base__c</fullName>
    <label>Presupuesto base</label>
    <referenceTo>Presupuesto_base__c</referenceTo>
    <relationshipLabel>Presupuestos detalle</relationshipLabel>
    <relationshipName>Presupuestos_detalle</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>