force-app/main/default/objects/Presupuesto_detalle__c/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Rubro__c.Concepto__c</field>
            <operation>equals</operation>
            <valueField>$Source.Concepto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rubro__c</referenceTo>
    <relationshipLabel>Presupuestos detalle</relationshipLabel>
    <relationshipName>Presupuestos_detalle</relationshipName>
    <type>Lookup</type>
</CustomField>