force-app/main/default/objects/Presupuesto_detalle__c/fields/Tarea__c.field-meta.xml
<CustomField>
    <fullName>Tarea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarea</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tarea__c.Gantt__c</field>
            <operation>equals</operation>
            <valueField>$Source.Gantt__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tarea__c</referenceTo>
    <relationshipLabel>Presupuestos detalle</relationshipLabel>
    <relationshipName>Presupuestos_detalle</relationshipName>
    <type>Lookup</type>
</CustomField>