force-app/main/default/objects/Presupuesto_detalle__c/fields/Tasa_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Tasa_impuestos__c</fullName>
    <label>Tasa impuestos</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>