force-app/main/default/objects/Presupuesto_detalle__c/fields/Valor_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Valor_impuestos__c</fullName>
    <formula>Subtotal__c * Tasa_impuestos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor impuestos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>