force-app/main/default/objects/Presupuesto_detalle__c/fields/Valor_total_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_en_dolares__c</fullName>
    <formula>if( Presupuesto_base__r.Moneda__r.Name = &#39;Pesos Argentinos&#39; , Valor_total__c / Presupuesto_base__r.Moneda__r.Ultima_cotizacion__c, Valor_total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total en dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>